tests/fixtures/fail/while_let_binding_scope.sc
let Option = std.Option

let next(): Option(i32) = { None }

let main(): i32 = {
  loop {
    match next()
      { Some(value) -> value }
      { None -> break() }
  }
  value
}
